CppTools: Parse non-project sources with default kit

This makes more sense than using the clang defaults.

Task-number: QTCREATORBUG-25562
Change-Id: I796d29bb4e81e5e257efea998dcab037efd8a717
Reviewed-by: Christian Stenger <christian.stenger@qt.io>